--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@visx/group": "^3.12.0",
+    "@visx/hierarchy": "^3.12.0",
+    "@visx/scale": "^3.12.0",
+    "@visx/tooltip": "^3.12.0",
+    "@visx/zoom": "^3.12.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
