--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "source ~/.nvm/nvm.sh && nvm use 20 && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
