--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lodash.throttle": "^4.1.1",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "simple-git": "^3.30.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
