--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@visx/scale": "^3.12.0",
     "@visx/tooltip": "^3.12.0",
     "@visx/zoom": "^3.12.0",
+    "isomorphic-git": "^1.36.3",
     "lodash.throttle": "^4.1.1",
     "next": "16.1.6",
     "react": "19.2.3",
