--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@visx/scale": "^3.12.0",
     "@visx/tooltip": "^3.12.0",
     "@visx/zoom": "^3.12.0",
+    "d3-force": "^3.0.0",
+    "d3-scale": "^4.0.2",
+    "d3-zoom": "^3.0.0",
     "isomorphic-git": "^1.36.3",
     "lodash.throttle": "^4.1.1",
     "next": "16.1.6",
@@ -29,6 +32,9 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@types/d3-force": "^3.0.10",
+    "@types/d3-scale": "^4.0.9",
+    "@types/d3-zoom": "^3.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
