--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "source ~/.nvm/nvm.sh && nvm use 20 && next dev",
-    "build": "next build",
+    "build": "source ~/.nvm/nvm.sh && nvm use 20 && next build",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "source ~/.nvm/nvm.sh && nvm use 20 && jest",
+    "test:watch": "source ~/.nvm/nvm.sh && nvm use 20 && jest --watch"
   },
   "dependencies": {
     "@types/lodash.throttle": "^4.1.9",
@@ -17,8 +17,12 @@
     "@visx/scale": "^3.12.0",
     "@visx/tooltip": "^3.12.0",
     "@visx/zoom": "^3.12.0",
+    "d3": "^7.9.0",
+    "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
+    "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
     "isomorphic-git": "^1.36.3",
     "lodash.throttle": "^4.1.1",
@@ -32,6 +36,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
+    "@types/d3-drag": "^3.0.7",
     "@types/d3-force": "^3.0.10",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-zoom": "^3.0.8",
